Refs #12921 Fixed broken styles.
git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@24845 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/mobile/themes/android/Heading.css
+++ b/mobile/themes/android/Heading.css
@@ -19,6 +19,7 @@
   text-align: center;
   line-height: 23px;
   text-shadow: rgba(0, 0, 0, 0.6) 0px -1px 0px;
+  z-index: 1;
 }
 /* Heading Arrow Button */
 .mblArrowButton {
