--- a/mobile/themes/android/variables.less
+++ b/mobile/themes/android/variables.less
@@ -38,6 +38,7 @@
 	text-align: center;
 	line-height: 23px;
 	text-shadow: rgba(0,0,0,0.6) 0px -1px 0px;
+	z-index: 1;
 }
 .mblArrowButton-styles () {
 	height: 25px;
