--- a/mobile/themes/blackberry/variables.less
+++ b/mobile/themes/blackberry/variables.less
@@ -39,6 +39,7 @@
 	font-weight: normal;
 	text-align: center;
 	line-height: 40px;
+	z-index: 1;
 }
 .mblArrowButton-styles () {
 	height: 28px;
