--- a/mobile/themes/custom/ListItem.css
+++ b/mobile/themes/custom/ListItem.css
@@ -61,7 +61,7 @@
   background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #ffffff), color-stop(3.3333333333333335%, rgba(255, 255, 255, 0.1)), color-stop(0.5, rgba(255, 255, 255, 0.8)), color-stop(1, rgba(255, 255, 255, 0.5)));
 }
 .mblItemSelected a.mblListItemAnchor {
-  color: white;
+  color: #000000;
 }
 .mblItemSelected .mblDomButton DIV {
   border-color: white;
