--- a/mobile/themes/custom/Switch.css
+++ b/mobile/themes/custom/Switch.css
@@ -10,6 +10,7 @@
 }
 .mblSwitchBgLeft {
   background-color: #45a4ff;
+  color: #131313;
 }
 .mblSwitchBgRight {
   background-color: #deefff;
