--- a/mobile/themes/custom/TabBar.css
+++ b/mobile/themes/custom/TabBar.css
@@ -23,7 +23,7 @@
   position: relative;
   list-style-type: none;
   float: left;
-  padding: 5px;
+  padding: 5px 0;
 }
 .mblTabBar .mblTabBarButton.mblTabButtonSelected {
   border-color: #769dc0;
@@ -68,7 +68,7 @@
   list-style-type: none;
   cursor: pointer;
   -webkit-tap-highlight-color: transparent;
-  width: 100px;
+  width: 90px;
   height: 30px;
   border-width: 1px 1px 1px 0px;
   border-style: inset;
